tests/rosetta/out/Ruby/15-puzzle-solver.rb
# Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
testpkg = Struct.new(:Add, :Pi, :Answer, :FifteenPuzzleExample).new(->(a,b){ a + b }, 3.14, 42, ->(){ 'Solution found in 52 moves: rrrulddluuuldrurdddrullulurrrddldluurddlulurruldrdrd' })

puts(testpkg.FifteenPuzzleExample.call())
